// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when rendering a Mule component when the component has mapping renders correctly 1`] = `
<div>
  <div
    className="component-container some-css-class"
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      className="component set-payload"
    >
      <img
        className="category-frame"
        src="/img/icons/setters.large.png"
      />
      <img
        className="icon"
        src="/img/icons/set-payload.png"
      />
      <div
        className="label"
      >
        Set some payload
      </div>
    </div>
  </div>
</div>
`;

exports[`when rendering a Mule component when the component is unknown renders correctly 1`] = `
<div>
  <div
    className="component-container some-css-class"
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      className="component sjdsfjlsdf"
    >
      <img
        className="category-frame"
        src="/img/icons/org.mule.tooling.ui.modules.core.miscellaneous.large.png"
      />
      <img
        className="icon"
        src="/img/icons/UnknownNode-48x32.png"
      />
      <div
        className="label"
      >
        Set some payload
      </div>
    </div>
  </div>
</div>
`;

exports[`when rendering a Mule container when it has children renders correctly 1`] = `
<div>
  <div
    className="container mule-flow some-css-class"
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      className="container-title"
    >
      Do something
    </div>
    <div
      className="container-inner"
    >
      <div
        className="icon-container"
      >
        <img
          className="category-frame"
          src="/img/icons/org.mule.tooling.ui.modules.core.miscellaneous.large.png"
        />
      </div>
      <div
        className="container-children"
      >
        <div>
          <div
            className="component-container some-css-class"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <img
              className="diff-icon"
              src="/img/is-not-equal-to.svg"
            />
            <div
              className="component set-payload"
            >
              <img
                className="category-frame"
                src="/img/icons/setters.large.png"
              />
              <img
                className="icon"
                src="/img/icons/set-payload.png"
              />
              <div
                className="label"
              >
                Set some payload
              </div>
            </div>
          </div>
        </div>
        <img
          className="flow-arrow"
          src="/img/arrow-right-2x.png"
        />
        <div>
          <div
            className="component-container some-css-class"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <img
              className="diff-icon"
              src="/img/minus.svg"
            />
            <div
              className="component message-properties-transformer"
            >
              <img
                className="category-frame"
                src="/img/icons/transformers.large.png"
              />
              <img
                className="icon"
                src="/img/icons/message-properties-transformer.png"
              />
              <div
                className="label"
              >
                Transform something
              </div>
            </div>
          </div>
        </div>
        <img
          className="flow-arrow"
          src="/img/arrow-right-2x.png"
        />
        <div>
          <div
            className="component-container some-css-class"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <img
              className="diff-icon"
              src="/img/plus.svg"
            />
            <div
              className="component http:request"
            >
              <img
                className="category-frame"
                src="/img/icons/listeners.large.png"
              />
              <img
                className="icon"
                src="/img/icons/http-request.png"
              />
              <div
                className="label"
              >
                Make some request
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`when rendering a Mule container when it has no children renders correctly 1`] = `
<div>
  <div
    className="container mule-flow some-css-class"
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      className="container-title"
    >
      Do something
    </div>
    <div
      className="container-inner"
    >
      <div
        className="icon-container"
      >
        <img
          className="category-frame"
          src="/img/icons/org.mule.tooling.ui.modules.core.miscellaneous.large.png"
        />
      </div>
      <div
        className="container-children"
      />
    </div>
  </div>
</div>
`;
